<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovementRecorder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="walking">Walking</string>
    <string name="stairs">Climbing the stairs</string>
    <string name="sitting">Sitting on a chair</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="upload">Upload selected</string>
    <string name="save_question">Keep recording?</string>
    <string name="save">Keep</string>
    <string name="discard">Discard</string>
	<string name="directory">/assignment3</string>
	<string name="testmode">Upload as test data</string>
</resources>
