<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="dk.itu.spct.f2014.ma03.pmor.janv.androidapp.MainActivity"
    tools:ignore="MergeRootFrame" >
    
    <ListView
        android:id="@+id/recordingsListView"
        android:layout_width="match_parent"
        android:layout_height="150dp" >
    </ListView>
    
    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload" />

    <RadioGroup
        android:id="@+id/activityRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp" >

        <RadioButton
            android:id="@+id/activityStairsRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/stairs" />

        <RadioButton
            android:id="@+id/activityWalkRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walking" />

        <RadioButton
            android:id="@+id/activitySitRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sitting" />
    </RadioGroup>

    <Button
        android:id="@+id/recordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onStartRecordButtonClicked"
        android:text="@string/start_recording" />
    
</LinearLayout>
